<resources>
    <string name="app_name">Moncy</string>
    <string name="image_view_currency_now">image view currency now</string>
    <string name="image_view_circle_menu">image view circle menu</string>
    <string name="image_view_list_currency">image view list currency</string>
    <string name="image_view_historical_currency">image view historical currency</string>
    <string name="historical_currency">History</string>
    <string name="image_view_convert_currency">image view convert currency</string>
    <string name="convert_currency">Convert</string>
    <string name="image_view_data_offline">image view data offline</string>
    <string name="image_view_blank">image view blank</string>
    <string name="blank">Blank</string>
    <string name="image_view_icon_country">image view icon country</string>
    <string name="please_wait">Please wait</string>
    <string name="no_data_available">No Data Available</string>
    <string name="try_again">Try Again</string>
    <string name="idr">IDR</string>
    <string name="_10_000">10.000</string>
    <string name="indonesia">Indonesia</string>
    <string name="load_data_failed">Load Data Failed!</string>
    <string name="asia">Asia</string>
    <string name="image_view_country_map">image view country map</string>
    <string name="image_view_icon_date">image view icon date</string>
    <string name="date">Date</string>
    <string name="value">value</string>
    <string name="submit">Submit</string>
    <string name="change">Change</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="source">Source</string>
    <string name="usd">USD</string>
    <string name="_16_juli_2017_11_04">16-Juli-2017 11:04</string>
    <string name="image_view_icon_arrow_drop_down">image view icon arrow drop down</string>
    <string name="_0">0</string>
    <string name="currency_code">Currency Code</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ac">AC</string>
    <string name="_dot">.</string>
    <string name="convert_currency_failed">Convert Currency Failed</string>
    <string name="about">About</string>
    <string name="banner">banner</string>
    <string name="icon_app">icon app</string>
    <string name="ysn_studio">YSN Studio</string>
    <string name="internal_error">Internal error</string>
</resources>
