<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative_layout_container_item_available_currency"
    android:paddingTop="8dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    >

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/image_view_country_flag_item_available_currency"
        android:contentDescription="@string/image_view_icon_country"
        android:src="@drawable/image_loading"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_country_name_item_available_currency"
        android:text="@string/indonesia"
        android:textSize="16sp"
        android:layout_toRightOf="@+id/image_view_country_flag_item_available_currency"
        android:layout_toEndOf="@+id/image_view_country_flag_item_available_currency" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_currency_code_item_available_currency"
        android:text="@string/idr"
        android:textColor="@android:color/darker_gray"
        android:layout_toRightOf="@+id/image_view_country_flag_item_available_currency"
        android:layout_toEndOf="@+id/image_view_country_flag_item_available_currency"
        android:layout_below="@+id/text_view_country_name_item_available_currency" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_country_region_item_available_currency"
        android:text="@string/asia"
        android:textColor="@android:color/darker_gray"
        android:layout_toRightOf="@+id/image_view_country_flag_item_available_currency"
        android:layout_toEndOf="@+id/image_view_country_flag_item_available_currency"
        android:layout_below="@+id/text_view_currency_code_item_available_currency" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/image_view_country_map_location_item_available_currency"
        android:layout_below="@+id/text_view_country_region_item_available_currency"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:contentDescription="@string/image_view_country_map"
        />

</RelativeLayout>