<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative_layout_container_item_currency_now_body"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    >

    <View
        android:layout_width="1dp"
        android:layout_height="100dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:id="@+id/image_view_flag_country_item_currency_now_body"
        android:src="@drawable/ic_flag_thumbnail"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="61dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_view_icon_country"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_label_currency_item_currency_now_body"
        android:layout_toRightOf="@+id/image_view_flag_country_item_currency_now_body"
        android:layout_toEndOf="@+id/image_view_flag_country_item_currency_now_body"
        android:text="@string/usd"
        android:textSize="13sp"
        android:textColor="@android:color/darker_gray"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_value_currency_item_currency_now_body"
        android:layout_toRightOf="@+id/text_view_label_currency_item_currency_now_body"
        android:layout_toEndOf="@+id/text_view_label_currency_item_currency_now_body"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/_10_000"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_country_name_item_currency_now_body"
        android:text="@string/indonesia"
        android:textSize="15sp"
        android:layout_toRightOf="@+id/image_view_flag_country_item_currency_now_body"
        android:layout_toEndOf="@+id/image_view_flag_country_item_currency_now_body"
        android:layout_below="@+id/text_view_value_currency_item_currency_now_body"
        />

</RelativeLayout>