<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context="com.ysn.moncy.view.submenu.convert.ConvertCurrencyActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_convert_currency"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_layout_container_refresh_activity_convert_currency"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_message_load_data_failed_activity_convert_currency"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/no_data_available"
            android:textAllCaps="true"
            android:textSize="16sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_try_again_activity_convert_currency"
            android:layout_below="@+id/text_view_message_load_data_failed_activity_convert_currency"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_button_try_again"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingTop="13dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="13dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear_layout_container_content_activity_convert_currency"
        android:layout_below="@+id/toolbar_activity_convert_currency"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/text_view_value_source_code_currency_activity_convert_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/usd"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/image_view_icon_drop_down_value_source_currency_activity_convert_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/text_view_value_source_code_currency_activity_convert_currency"
                    android:layout_toRightOf="@+id/text_view_value_source_code_currency_activity_convert_currency"
                    android:contentDescription="@string/image_view_icon_arrow_drop_down"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp" />

                <TextView
                    android:id="@+id/text_view_source_amount_activity_convert_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="4dp"
                    android:text="@string/_0"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="28sp" />

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:id="@+id/image_view_source_country_activity_convert_currency"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@+id/text_view_source_amount_activity_convert_currency"
                    android:layout_toStartOf="@+id/text_view_source_amount_activity_convert_currency"
                    android:contentDescription="@string/image_view_icon_country"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:src="@drawable/usa" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/text_view_value_to_code_currency_activity_convert_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/idr"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/image_view_icon_drop_down_value_to_currency_activity_convert_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/text_view_value_to_code_currency_activity_convert_currency"
                    android:layout_toRightOf="@+id/text_view_value_to_code_currency_activity_convert_currency"
                    android:contentDescription="@string/image_view_icon_arrow_drop_down"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_view_to_amount_activity_convert_currency"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:paddingBottom="4dp"
                    android:text="@string/_0"
                    android:textSize="28sp"
                    />

                <ProgressBar
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/progress_bar_loading_activty_convert_currency"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:paddingBottom="4dp"
                    android:visibility="gone"
                    />

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:id="@+id/image_view_to_country_activity_convert_currency"
                    android:src="@drawable/idr"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/text_view_to_amount_activity_convert_currency"
                    android:layout_toStartOf="@+id/text_view_to_amount_activity_convert_currency"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:contentDescription="@string/image_view_icon_country"
                    />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:alignmentMode="alignBounds"
                app:columnCount="4"
                >

                <!--row 0-->
                <Button
                    android:id="@+id/button_keypad_1_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/_1"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="0"
                    />

                <Button
                    android:id="@+id/button_keypad_2_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/_2"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="0"
                    />

                <Button
                    android:id="@+id/button_keypad_3_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/_3"
                    app:layout_column="2"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="0"
                    />

                <Button
                    android:id="@+id/button_keypad_backspace_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/x"
                    app:layout_column="3"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="0"
                    app:layout_rowSpan="2"
                    />

                <!--row 1-->
                <Button
                    android:id="@+id/button_keypad_4_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/_4"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="1"
                    />

                <Button
                    android:id="@+id/button_keypad_5_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/_5"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="1"
                    />

                <Button
                    android:id="@+id/button_keypad_6_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/_6"
                    app:layout_column="2"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="1"
                    />

                <!--row 2-->
                <Button
                    android:id="@+id/button_keypad_7_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/_7"
                    app:layout_column="0"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="2"
                    />

                <Button
                    android:id="@+id/button_keypad_8_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/_8"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="2"
                    />

                <Button
                    android:id="@+id/button_keypad_9_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/_9"
                    app:layout_column="2"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="2"
                    />

                <Button
                    android:id="@+id/button_keypad_clear_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/ac"
                    app:layout_column="3"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="2"
                    app:layout_rowSpan="2"
                    />

                <!--row 3-->
                <Button
                    android:id="@+id/button_keypad_0_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/_0"
                    app:layout_column="0"
                    app:layout_columnSpan="2"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="3"
                    />

                <Button
                    android:id="@+id/button_keypad_dot_activity_convert_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_keypad"
                    android:text="@string/_dot"
                    app:layout_column="2"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_row="3"
                    />

            </android.support.v7.widget.GridLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
