<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ysn.moncy.view.submenu.historical.result.HistoricalResultFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_label_source_fragment_historical_result"
        android:layout_centerHorizontal="true"
        android:text="@string/source"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_value_source_fragment_historical_result"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_view_label_source_fragment_historical_result"
        android:text="@string/usd"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_timestamp_fragment_historical_result"
        android:layout_below="@+id/text_view_value_source_fragment_historical_result"
        android:layout_centerHorizontal="true"
        android:text="@string/_16_juli_2017_11_04"
        android:textStyle="italic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view_divider_horizontal_fragment_historical_result"
        android:layout_below="@+id/text_view_timestamp_fragment_historical_result"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/darker_gray" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view_data_fragment_historical_result"
        android:layout_below="@+id/view_divider_horizontal_fragment_historical_result" />

</RelativeLayout>
