<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    tools:context="com.ysn.moncy.view.submenu.historical.date.HistoricalDateActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_historical_date"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:id="@+id/relative_layout_container_activity_historical_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_activity_historical_date">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white_rounded"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/text_view_date_activity_historical_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/image_view_icon_date_activity_historical_date"
                android:layout_toRightOf="@+id/image_view_icon_date_activity_historical_date"
                android:text="@string/date"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/image_view_icon_date_activity_historical_date"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/image_view_icon_date"
                android:src="@drawable/ic_date_range_black_24dp" />

            <TextView
                android:id="@+id/text_view_value_date_activity_historical_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_date_activity_historical_date"
                android:layout_toEndOf="@+id/image_view_icon_date_activity_historical_date"
                android:layout_toRightOf="@+id/image_view_icon_date_activity_historical_date"
                android:text="@string/value"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_submit_activity_historical_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/image_view_icon_date_activity_historical_date"
                android:background="@drawable/background_button_transparent_click"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:text="@string/submit"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/button_change_date_activity_historical_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_view_icon_date_activity_historical_date"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/button_submit_activity_historical_date"
                android:layout_toStartOf="@+id/button_submit_activity_historical_date"
                android:background="@drawable/background_button_transparent_click"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:text="@string/change"
                android:textColor="@color/colorPrimaryDark" />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/frame_layout_container_activity_historical_date"
            />

    </RelativeLayout>

</RelativeLayout>
